--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">Pagina Principal</a>
             <a href="biografia.html">Biografia</a>
@@ -18,8 +19,25 @@
         </nav>
     </header>
     <main>
-
+        <section id="contacto">
+            <p>Contactame para saber mas de mi o si estas interesado en contratarme</p>
+            <form action="" id="grid-contacto">
+                <input type="text" name="nombre" id="nombre" placeholder="Nombre Completo">
+                <input type="mail" name="correo" id="correo" placeholder="Correo Electronico">
+                <input type="text" name="asunto" id="asunto" placeholder="Asunto">
+                <textarea name="contenido" id="contenido" placeholder="Mensaje" rows="10"></textarea>
+                <input type="submit" id="enviar">
+            </form>
+        </section>
     </main>
+    <footer>
+        <ul>
+            <li>Hola</li>
+            <li>Hola</li>
+            <li>Adios</li>
+            <li>Adios</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
