--- a/biografia.html
+++ b/biografia.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yeray Moreno - Biografia</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-        
+        <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">Pagina Principal</a>
-            <a  id ="current-page" href="biografia.html">Biografia</a>
+            <a id="current-page" href="biografia.html">Biografia</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contacto.html">Contacto</a>
         </nav>
     </header>
     <main>
-        
+
     </main>
+    <footer>
+        <ul>
+            <li>Hola</li>
+            <li>Hola</li>
+            <li>Adios</li>
+            <li>Adios</li>
+        </ul>
+    </footer>
 </body>
+
 </html>
