--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">Pagina Principal</a>
             <a href="biografia.html">Biografia</a>
@@ -18,5 +19,13 @@
     <main>
 
     </main>
+    <footer>
+        <ul>
+            <li>Hola</li>
+            <li>Hola</li>
+            <li>Adios</li>
+            <li>Adios</li>
+        </ul>
+    </footer>
 </body>
 </html>
