--- a/biografia.html
+++ b/biografia.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeray Moreno - Biografia</title>
+    <title>Yeray Moreno - Contacto</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -19,14 +27,16 @@
         </nav>
     </header>
     <main>
-
+        <section>
+            <h2>Biografia</h2>
+        </section>
     </main>
     <footer>
         <ul>
-            <li>Hola</li>
-            <li>Hola</li>
-            <li>Adios</li>
-            <li>Adios</li>
+            <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a></li>
+            <li>yeraymorenogarcia0@gmail.com</li>
+            <li id="copyright">&copy;Yeray Moreno </li>
         </ul>
     </footer>
 </body>
