--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeray Moreno - Home</title>
+    <title>Yeray Moreno - Contacto</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,21 +25,21 @@
         </nav>
     </header>
     <main>
-        <section>
-            
+        <section id="bienvenida">
+            <h2>Hola soy Yeray</h2>
+            <h3>Un desarrollador de videojuegos y aplicaciones web</h3>
         </section>
         <section>
-            <h2></h2>
-            <p></p>
+            <h3>En esta pagina podras aprender sobre mi carrera en el mundo de la programacion </h3>
         </section>
     </main>
     <footer>
         <ul>
-            <li>Hola</li>
-            <li>Hola</li>
-            <li>Adios</li>
-            <li>Adios</li>
+            <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a></li>
+            <li>yeraymorenogarcia0@gmail.com</li>
         </ul>
+        <p id="copyright">&copy;Yeray Moreno </p>
     </footer>
 </body>
 
