--- a/biografia.html
+++ b/biografia.html
@@ -26,19 +26,54 @@
             <a href="contacto.html">Contacto</a>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2>Biografia</h2>
-        </section>
+    <main id="biografia">
+        <div class="filtro-color">
+            <section>
+                <h2>Biografia</h2>
+                <p>
+                    Soy Yeray, un chaval que nacio el 17 de julio de 1998 en Bilbao, Pais Vasco.
+                    <br>
+                    Hasta que no llegue a bachiller, no tenia claro a que me queria dedicar, de pequeño de gustaban
+                    mucho los dinosaurios y los animales por lo que queria ser o paleontologo o veterinario, hasta que
+                    me hice mas mayor vi algun video de veterinarios con caballos y bueno, no quieres saber lo que
+                    hacian en ese video...
+                    <br><br>
+                    Al final sabia que me iba a dedicar a algo sobre ordenadores porque me gustaba mucho la tecnologia
+                    pero como era un estudiante muy normalito de sacar media de 5 o 6 pues pensaba que la universidad no
+                    era para mi por lo que me apunte a un grado superior de desarrollo de aplicaciones web (DAW).
+                    <br><br>
+                    Sorprendentemente no me fascino, no se si por el profesor de programacion o por que, pero al
+                    terminar el primer año aun habiendolo aprobado todo, decidi dejarlo y apuntarme a otro grado de
+                    programaccion y desarrollo de videojuegos en Implika aunque la empresa que daba el grado se llamaba
+                    Obicex, donde me empezo a gustar la programacion de verdad y me cambio el chip por completo, pase de
+                    hacer lo justo para aprobar a dedicar muchas horas al dia.
+                    <br><br>
+                    Termine el grado en 2 años pero no me veia preparado para entrar en el mundo laboral, por lo que
+                    como se me habia quedado la espinita de modelar personajes en 3D, porque no habiamos profundizado
+                    mucho en ello en el grado pues me apunte con unos cuantos compañeros a un master en Centro Pixels
+                    sobre modelado de personajes.
+                    <br><br>
+                    Me gusto la experiencia y mejore mucho en ese master pero deduci que lo mio era la logica y la
+                    programmacion por lo que hice en el mismo centro otro master solo de desarrollo y programaccion en
+                    Unity usando C# como lenguaje.
+                    <br><br>
+                    Repase todas las bases y adquiri muchos mas conocimientos de los que tenia y meses antes de terminar el master, mande mi curriculum a una empresas de videojuegos en españa llamada Starloop Studios y justo un mes antes de terminar el curso pase las pruebas de admision y me contrataron.
+                    <br><br>
+                    Alli estube trabajando hasta diciembre de 2023, casi 3 años trabajando en muchos proyectos diferentes como juegos de movil, juegos de VR incluso juegos relacionados con criptomonedas, pero por culpa del estado de la industria en estas fechas donde hubo despidos masibos, me toco sufrirlos a mi tambien.
+                    <br><br>
+                    Despues de eso decidi hacer un juego por mi cuenta mientras buscaba trabajo por lo que estube trabajando en ello durante vario meses, pero como veia que no encontraba trabajo, busque algun curso donde aprender cosas nuevas y ampliar mis conocimientos por lo que me inscribi a un bootcamp de desarrollo de aplicaciones web full stack, en el que estoy cursando actualmente.
+                </p>
+            </section>
+            <footer>
+                <ul>
+                    <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a>
+                    </li>
+                </ul>
+                <p id="copyright">&copy;Yeray Moreno </p>
+            </footer>
+        </div>
     </main>
-    <footer>
-        <ul>
-            <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a></li>
-            <li>yeraymorenogarcia0@gmail.com</li>
-            <li id="copyright">&copy;Yeray Moreno </li>
-        </ul>
-    </footer>
 </body>
 
 </html>
