Añadir todo el contenido a a pagina

--- a/biografia.html
+++ b/biografia.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="normal-header">
         <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">Pagina Principal</a>
@@ -26,49 +26,136 @@
             <a href="contacto.html">Contacto</a>
         </nav>
     </header>
+    <header id="small-header">
+        <h1>Yeray Moreno</h1>
+        <nav>
+            <a href="index.html">
+                <img src="imagenes/pagina-principal.png" alt="">
+            </a>
+            <a href="biografia.html" id="current-page">
+                <img src="imagenes/biografia.png" alt="">
+            </a>
+            <a href="portfolio.html">
+                <img src="imagenes/carpeta-del-juego.png" alt="">
+            </a>
+            <a href="contacto.html">
+                <img src="imagenes/correo-electronico.png" alt="">
+            </a>
+        </nav>
+    </header>
     <main id="biografia">
         <div class="filtro-color">
             <section>
                 <h2>Biografia</h2>
-                <p>
-                    Soy Yeray, un chaval que nacio el 17 de julio de 1998 en Bilbao, Pais Vasco.
+                <div class="fondo-blanco">
+                    <h3>Yeray Moreno - Desarrollador de videojuegos</h3>
                     <br>
-                    Hasta que no llegue a bachiller, no tenia claro a que me queria dedicar, de pequeño de gustaban
-                    mucho los dinosaurios y los animales por lo que queria ser o paleontologo o veterinario, hasta que
-                    me hice mas mayor vi algun video de veterinarios con caballos y bueno, no quieres saber lo que
-                    hacian en ese video...
+                    <p>Soy Yeray, un programador de videojuegos de Bilbao con casi 3 años de experiencia en la
+                        industria. He trabajado en diversos proyectos en Starloop Studios, donde he participado en el
+                        desarrollo de videojuegos móviles, juegos basados en criptomonedas y experiencias de realidad
+                        virtual. Lo que más me motiva es ofrecer nuevas experiencias a los jugadores mediante la
+                        creación de juegos con mecánicas innovadoras y mejoradas, siempre buscando maneras de elevar la
+                        jugabilidad y sorprender al usuario.</p>
+                    <br>
+                    <h4>Desarrollador de Videojuegos con Unity - Starloop Studios (Magic Media Mobile)</h4>
+                    <em>Mayo 2020 - Enero 2024</em>
+                    <p>En Starloop Studios, trabajé como desarrollador de videojuegos con Unity, donde me encargué de
+                        programar las mecánicas jugables y el funcionamiento de las interfaces de varios juegos móviles
+                        y de realidad virtual. El proyecto en el que más tiempo estuve trabajando fue un juego RPG por
+                        turnos, en el cual los personajes que los jugadores mejoraban eran NFTs que podían adquirirse en
+                        la página web del juego.</p>
+                    <br>
+                    <h4>Habilidades</h4>
+                    <br>
+                    <ul>
+                        <li><b>Unity</b>: Utilizado para crear y optimizar mecánicas de juego, interfaces y físicas.</li>
+                        <li><b>Visual Studio Code</b>: Entorno de desarrollo utilizado para programar las mecánicas y
+                            las interfaces de los juegos.</li>
+                        <li><b>C#</b>: Lenguaje de programación empleado en la creación de mecánicas jugables y
+                            funcionalidades dentro de los proyectos.</li>
+                        <li><b>Git</b>: Control de versiones utilizado para gestionar el código y colaborar en proyectos
+                            de equipo.</li>
+                        <li><b>Resolución de problemas</b>: Capacidad para identificar y abordar desafíos de manera
+                            efectiva.</li>
+                        <li><b>Trabajo en equipo</b>: Colaboración efectiva con compañeros para alcanzar objetivos
+                            comunes.
+                        </li>
+                        <li><b>Colaboración a distancia</b>: Habilidad para trabajar de manera eficiente en entornos
+                            remotos.
+                        </li>
+                    </ul>
                     <br><br>
-                    Al final sabia que me iba a dedicar a algo sobre ordenadores porque me gustaba mucho la tecnologia
-                    pero como era un estudiante muy normalito de sacar media de 5 o 6 pues pensaba que la universidad no
-                    era para mi por lo que me apunte a un grado superior de desarrollo de aplicaciones web (DAW).
-                    <br><br>
-                    Sorprendentemente no me fascino, no se si por el profesor de programacion o por que, pero al
-                    terminar el primer año aun habiendolo aprobado todo, decidi dejarlo y apuntarme a otro grado de
-                    programaccion y desarrollo de videojuegos en Implika aunque la empresa que daba el grado se llamaba
-                    Obicex, donde me empezo a gustar la programacion de verdad y me cambio el chip por completo, pase de
-                    hacer lo justo para aprobar a dedicar muchas horas al dia.
-                    <br><br>
-                    Termine el grado en 2 años pero no me veia preparado para entrar en el mundo laboral, por lo que
-                    como se me habia quedado la espinita de modelar personajes en 3D, porque no habiamos profundizado
-                    mucho en ello en el grado pues me apunte con unos cuantos compañeros a un master en Centro Pixels
-                    sobre modelado de personajes.
-                    <br><br>
-                    Me gusto la experiencia y mejore mucho en ese master pero deduci que lo mio era la logica y la
-                    programmacion por lo que hice en el mismo centro otro master solo de desarrollo y programaccion en
-                    Unity usando C# como lenguaje.
-                    <br><br>
-                    Repase todas las bases y adquiri muchos mas conocimientos de los que tenia y meses antes de terminar el master, mande mi curriculum a una empresas de videojuegos en españa llamada Starloop Studios y justo un mes antes de terminar el curso pase las pruebas de admision y me contrataron.
-                    <br><br>
-                    Alli estube trabajando hasta diciembre de 2023, casi 3 años trabajando en muchos proyectos diferentes como juegos de movil, juegos de VR incluso juegos relacionados con criptomonedas, pero por culpa del estado de la industria en estas fechas donde hubo despidos masibos, me toco sufrirlos a mi tambien.
-                    <br><br>
-                    Despues de eso decidi hacer un juego por mi cuenta mientras buscaba trabajo por lo que estube trabajando en ello durante vario meses, pero como veia que no encontraba trabajo, busque algun curso donde aprender cosas nuevas y ampliar mis conocimientos por lo que me inscribi a un bootcamp de desarrollo de aplicaciones web full stack, en el que estoy cursando actualmente.
-                </p>
+                    <h3>Historia</h3>
+                    <img src="./imagenes/Yeray Moreno García.jpg" alt="retrato de Yeray Moreno" id="retrato">
+                    <p>
+                        Nací el 17 de julio de 1998 en Bilbao, País Vasco.
+                    </p>
+                    <br>
+                    <p>
+                        Antes de llegar a bachillerato, no tenía claro a qué quería dedicarme. De pequeño, me fascinaban
+                        los dinosaurios y los animales, así que quería ser paleontólogo o veterinario. Sin embargo,
+                        cuando crecí un poco más, vi un video de veterinarios tratando caballos… y, bueno, mejor no
+                        entrar en detalles sobre lo que hacían en ese video.
+                    </p>
+                    <br>
+                    <p>
+                        Al final, sabía que me dedicaría a algo relacionado con los ordenadores porque siempre me ha
+                        gustado mucho la tecnología. Sin embargo, como era un estudiante promedio, con notas de 5 o 6,
+                        pensé que la universidad no era para mí. Por eso decidí inscribirme en un Grado Superior en
+                        Desarrollo de Aplicaciones Web (DAW).
+                    </p>
+                    <br>
+                    <p>
+                        Sorprendentemente, el primer grado no me fascinó. No sé si fue por el profesor de programación o
+                        por otra razón, pero al terminar el primer año, aunque había aprobado todas las materias, decidí
+                        dejarlo. Me inscribí en otro grado de Programación y Desarrollo de Videojuegos en Implika,
+                        aunque la empresa que impartía el curso se llamaba Obicex. Fue entonces cuando la programación
+                        realmente empezó a gustarme y me cambió por completo. Pasé de hacer lo mínimo para aprobar a
+                        dedicarle muchas horas al día.
+                    </p>
+                    <br>
+                    <p>
+                        Terminé el grado en dos años, pero no me sentía preparado para entrar en el mundo laboral. Como
+                        me había quedado con la espinita de aprender a modelar personajes en 3D, ya que en el grado no
+                        lo habíamos profundizado mucho, me apunté junto a unos compañeros a un máster en el Centro
+                        Pixels sobre modelado de personajes.
+                    </p>
+                    <br>
+                    <p>
+                        Disfruté mucho la experiencia y mejoré significativamente en ese máster, pero deduje que lo mío
+                        era la lógica y la programación. Por eso, en el mismo centro, decidí hacer otro máster, esta vez
+                        solo enfocado en desarrollo y programación en Unity, utilizando C# como lenguaje.
+                    </p>
+                    <br>
+                    <p>
+                        Repasé todas las bases y adquirí muchos más conocimientos de los que tenía. Meses antes de
+                        terminar el máster, envié mi currículum a una empresa de videojuegos en España llamada Starloop
+                        Studios pero ahora se llama Magic Media Mobile Studio. Justo un mes antes de finalizar el curso,
+                        pasé las pruebas de admisión y me contrataron.
+                    </p>
+                    <img src="./imagenes/starloop.png" alt="logo starloop studios" id="logo-empresa">
+                    <br>
+                    <p>
+                        Allí estuve trabajando hasta diciembre de 2023, casi tres años en los que participé en muchos
+                        proyectos diferentes, como juegos para móvil, juegos de realidad virtual e incluso juegos
+                        relacionados con criptomonedas. Sin embargo, debido a la situación de la industria en ese
+                        momento, que experimentó despidos masivos, también me vi afectado por esa circunstancia.
+                    </p>
+                    <br>
+                    <p>
+                        Después de eso, decidí crear un juego por mi cuenta mientras buscaba trabajo. Estuve trabajando
+                        en él durante varios meses, pero al no encontrar empleo, busqué algún curso para aprender cosas
+                        nuevas y ampliar mis conocimientos. Así que me inscribí en un bootcamp de desarrollo de
+                        aplicaciones web full stack, en el que estoy cursando actualmente.
+                    </p>
+                </div>
             </section>
             <footer>
                 <ul>
                     <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a>
                     </li>
+                    <li>Email: yeraymorenogarcia0@gmail.com</li>
                 </ul>
                 <p id="copyright">&copy;Yeray Moreno </p>
             </footer>
