--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="normal-header">
         <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">Pagina Principal</a>
@@ -26,11 +26,28 @@
             <a id="current-page" href="contacto.html">Contacto</a>
         </nav>
     </header>
+    <header id="small-header">
+        <h1>Yeray Moreno</h1>
+        <nav>
+            <a href="index.html">
+                <img src="imagenes/pagina-principal.png" alt="">
+            </a>
+            <a href="biografia.html">
+                <img src="imagenes/biografia.png" alt="">
+            </a>
+            <a href="portfolio.html">
+                <img src="imagenes/carpeta-del-juego.png" alt="">
+            </a>
+            <a href="contacto.html" id="current-page">
+                <img src="imagenes/correo-electronico.png" alt="">
+            </a>
+        </nav>
+    </header>
     <main id="contacto">
         <div class="filtro-color">
             <section>
                 <h2>Contacto</h2>
-                <!-- <p>Contactame para saber mas de mi o si estas interesado en contratarme</p> -->
+                <p>Contactame para saber mas de mi o si estas interesado en contratarme</p>
                 <form action="" id="grid-contacto">
                     <input type="text" name="nombre" id="nombre" class="input-formulario" placeholder="Nombre Completo"
                         required>
@@ -47,6 +64,7 @@
                     <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a>
                     </li>
+                    <li>Email: yeraymorenogarcia0@gmail.com</li>
                 </ul>
                 <p id="copyright">&copy;Yeray Moreno </p>
             </footer>
