--- a/index.html
+++ b/index.html
@@ -17,13 +17,30 @@
 </head>
 
 <body>
-    <header>
+    <header id="normal-header">
         <h1>Yeray Moreno</h1>
         <nav>
-            <a id="current-page" href="index.html">Pagina Principal</a>
+            <a id="current-page" href="index.html" >Pagina Principal</a>
             <a href="biografia.html">Biografia</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contacto.html">Contacto</a>
+        </nav>
+    </header>
+    <header id="small-header">
+        <h1>Yeray Moreno</h1>
+        <nav>
+            <a href="index.html" id="current-page">
+                <img src="imagenes/pagina-principal.png" alt="">
+            </a>
+            <a href="biografia.html">
+                <img src="imagenes/biografia.png" alt="">
+            </a>
+            <a  href="portfolio.html">
+                <img src="imagenes/carpeta-del-juego.png" alt="">
+            </a>
+            <a href="contacto.html">
+                <img src="imagenes/correo-electronico.png" alt="">
+            </a>
         </nav>
     </header>
     <main id="pagina-principal">
@@ -54,6 +71,7 @@
                 <ul>
                     <li><a href="https://github.com/YerBrown" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/yeray-moreno-a71512140/" target="_blank">LinkedIn</a></li>
+                    <li>Email: yeraymorenogarcia0@gmail.com</li>
                 </ul>
                 <p id="copyright">&copy;Yeray Moreno </p>
             </footer>
