Añadir alt en iconos del header

--- a/biografia.html
+++ b/biografia.html
@@ -30,16 +30,16 @@
         <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">
-                <img src="imagenes/pagina-principal.png" alt="">
+                <img src="imagenes/pagina-principal.png" alt="icono pagina principal">
             </a>
             <a href="biografia.html" id="current-page">
-                <img src="imagenes/biografia.png" alt="">
+                <img src="imagenes/biografia.png" alt="icono biografia">
             </a>
             <a href="portfolio.html">
-                <img src="imagenes/carpeta-del-juego.png" alt="">
+                <img src="imagenes/carpeta-del-juego.png" alt="icono portfolio">
             </a>
             <a href="contacto.html">
-                <img src="imagenes/correo-electronico.png" alt="">
+                <img src="imagenes/correo-electronico.png" alt="icono contacto">
             </a>
         </nav>
     </header>
@@ -47,7 +47,7 @@
         <div class="filtro-color">
             <section>
                 <h2>Biografia</h2>
-                <div class="fondo-blanco">
+                <article class="fondo-blanco">
                     <h3>Yeray Moreno - Desarrollador de videojuegos</h3>
                     <br>
                     <p>Soy Yeray, un programador de videojuegos de Bilbao con casi 3 años de experiencia en la
@@ -58,7 +58,7 @@
                         jugabilidad y sorprender al usuario.</p>
                     <br>
                     <h4>Desarrollador de Videojuegos con Unity - Starloop Studios (Magic Media Mobile)</h4>
-                    <em>Mayo 2020 - Enero 2024</em>
+                    <em>Mayo 2021 - Enero 2024</em>
                     <p>En Starloop Studios, trabajé como desarrollador de videojuegos con Unity, donde me encargué de
                         programar las mecánicas jugables y el funcionamiento de las interfaces de varios juegos móviles
                         y de realidad virtual. El proyecto en el que más tiempo estuve trabajando fue un juego RPG por
@@ -68,7 +68,8 @@
                     <h4>Habilidades</h4>
                     <br>
                     <ul>
-                        <li><b>Unity</b>: Utilizado para crear y optimizar mecánicas de juego, interfaces y físicas.</li>
+                        <li><b>Unity</b>: Utilizado para crear y optimizar mecánicas de juego, interfaces y físicas.
+                        </li>
                         <li><b>Visual Studio Code</b>: Entorno de desarrollo utilizado para programar las mecánicas y
                             las interfaces de los juegos.</li>
                         <li><b>C#</b>: Lenguaje de programación empleado en la creación de mecánicas jugables y
@@ -84,7 +85,9 @@
                             remotos.
                         </li>
                     </ul>
-                    <br><br>
+                </article>
+                <article class="fondo-blanco">
+
                     <h3>Historia</h3>
                     <img src="./imagenes/Yeray Moreno García.jpg" alt="retrato de Yeray Moreno" id="retrato">
                     <p>
@@ -148,7 +151,7 @@
                         nuevas y ampliar mis conocimientos. Así que me inscribí en un bootcamp de desarrollo de
                         aplicaciones web full stack, en el que estoy cursando actualmente.
                     </p>
-                </div>
+                </article>
             </section>
             <footer>
                 <ul>
