--- a/contacto.html
+++ b/contacto.html
@@ -30,16 +30,16 @@
         <h1>Yeray Moreno</h1>
         <nav>
             <a href="index.html">
-                <img src="imagenes/pagina-principal.png" alt="">
+                <img src="imagenes/pagina-principal.png" alt="icono pagina principal">
             </a>
             <a href="biografia.html">
-                <img src="imagenes/biografia.png" alt="">
+                <img src="imagenes/biografia.png" alt="icono biografia">
             </a>
             <a href="portfolio.html">
-                <img src="imagenes/carpeta-del-juego.png" alt="">
+                <img src="imagenes/carpeta-del-juego.png" alt="icono portfolio">
             </a>
             <a href="contacto.html" id="current-page">
-                <img src="imagenes/correo-electronico.png" alt="">
+                <img src="imagenes/correo-electronico.png" alt="icono contacto">
             </a>
         </nav>
     </header>
